Working on response to reviewers and MS text.
Looked at texts with no evidence for status by subsistence in mosaic plot.

Adjusted var names in both script files to match updated data package.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -10,6 +10,26 @@
   }
 
 
+
+@article{behrendt_integrative_2017,
+	title = {An integrative model of leadership behavior},
+	volume = {28},
+	issn = {1048-9843},
+	url = {http://www.sciencedirect.com/science/article/pii/S1048984316300479},
+	doi = {10.1016/j.leaqua.2016.08.002},
+	abstract = {Decades of questionnaire and interview studies have revealed various leadership behaviors observed in successful leaders. However, little is known about the actual behaviors that cause those observations. Given that lay observers are prone to cognitive biases, such as the halo effect, the validity of theories that are exclusively based on observed behaviors is questionable. We thus follow the call of leading scientists in the field and derive a parsimonious model of leadership behavior that is informed by established psychological theories. Building on the taxonomy of Yukl (2012), we propose three task-oriented behavior categories (enhancing understanding, strengthening motivation and facilitating implementation) and three relation-oriented behavior categories (fostering coordination, promoting cooperation and activating resources), each of which is further specified by a number of distinct behaviors. While the task-oriented behaviors are directed towards the accomplishment of shared objectives, the relation-oriented behaviors support this process by increasing the coordinated engagement of the team members. Our model contributes to the advancement of leadership behavior theory by (1) consolidating current taxonomies, (2) sharpening behavioral concepts of leadership behavior, (3) specifying precise relationships between those categories and (4) spurring new hypotheses that can be derived from existing findings in the field of psychology. To test our model as well as the hypotheses derived from this model, we advocate the development of new measurements that overcome the limitations associated with questionnaire and interview studies.},
+	language = {en},
+	number = {1},
+	urldate = {2020-04-06},
+	journal = {The Leadership Quarterly},
+	author = {Behrendt, Peter and Matz, Sandra and Göritz, Anja S.},
+	month = feb,
+	year = {2017},
+	keywords = {Effective leadership behavior, Observer bias, Theory},
+	pages = {229--244},
+	file = {ScienceDirect Full Text PDF:/Users/zgarf/Zotero/storage/KB5JJDLD/Behrendt et al. - 2017 - An integrative model of leadership behavior.pdf:application/pdf;ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/INQ2XCCJ/S1048984316300479.html:text/html}
+}
+
 @incollection{ames_hierarchies_1985,
 	title = {Hierarchies, {Stress}, and {Logistical} {Strategies} among {Hunter}–{Gatherers} in {Northwestern} {North} {America}},
 	isbn = {978-0-12-564750-2},
