--- a/Response to reviewers.Rmd
+++ b/Response to reviewers.Rmd
@@ -46,7 +46,7 @@ knitr::opts_chunk$set(echo = TRUE)
 We greatly appreciate the detailed comments and very useful suggestions. 
 
 **The paper was framed partially as providing an analysis of differences between traditional societies and WEIRD societies but, unless I missed it, there was not much analysis along these lines. Neither the background section nor the Discussion section focuses much on contrasting WEIRD and traditional societies. The paper appears to miss out on a useful opportunity to provide some commentary on this issue. Also, I realize the paper is decidedly exploratory/descriptive, but did the authors have any hypotheses about differences between WEIRD and traditional societies?** 
-We agree our initial submisson did not sufficently accomplish this goal. We have now added summarizing, concluding statements on the qualities and functions of leaders in WEIRD and non-WEIRD settings in the introduction. 
+We agree our initial submisson did not sufficiently accomplish this goal. We have now added summarizing, concluding statements on the qualities and functions of leaders in WEIRD and non-WEIRD settings in the introduction. 
 
 NEED TO ADD TO DISCUSSION & ANALYSES?
 
@@ -63,15 +63,15 @@ OR, better idea (?), use LASSO technique from paper one, to identify words predi
 
 **Some readers might appreciate a bit more detail about how the HRAF database was created, including how the ethnographic records were identified and selected and whom and when they are from.** 
 
-We added a few additional details in the methods section on the eHRAF and ethngraphic sample and now more clearly direct readers to the original pubication from which the database was built, which includes additional details. 
+We added a few additional details in the methods section on the eHRAF and ethnographic sample and now more clearly direct readers to the original publication from which the database was built, which includes additional details. 
 
-We also include additional details in the results and supplimentary information on the corpus of ethnographic documents which provide the sample of ethnographic paragraphs. NEED TO DO. 
+We also include additional details in the results and supplementary information on the corpus of ethnographic documents which provide the sample of ethnographic paragraphs. NEED TO DO. 
 
 **I don't work with ethnographic data, so perhaps this question is naïve, but: What conclusions can we draw about the actual frequency of leadership functions and traits from the frequency with which they are mentioned in the ethnographic record? There is an implicit assumption that the two are closely aligned. Has such an alignment been confirmed? Is that even testable?**
 
-The reviewer brings up an important point. For one, this is partly our motivation for representing the percentage of cultures which provide at least one text record supporting each of the operationalized variables. Despite this low threshold for accepting supporting evidence, the ethnogrtaphic record (sampled here) does not provide support for every variable from every culture. At this culture-level we feel more confident our data provide a estiamte of cross-cultural frequency, albeit an inherently noisy, "course-grained" estimation. Also, the entire field of ethnology (the branch of anthropology focused on comparing charachteristics of populations across the globe) is based on developing comparable and often quantitaive measures from primary ethnogrpahic information. For example, the Ethnographic Atlas, which provides hundreds of coded quantitaive and qualitive variables on thousands of cultures and the Standard Cross-Cultural Sample, which provides thousands of coded quantitative and qualitative variables on 186 cultures, were developed in essentially the same way we have developed our operatiopnalized variables here. Developing and contrasting coded measures from primary ethnographic documents is not without limitations, but does represent (perhaps) the only method to systematically and empirically compare measures across a large sample of cultures/populations. At the text-record level drawing strong conclusions about the actual frequency of traits is slightly more problematic. However, fundamentally these results provide a systematic view of the ethnographic record on these measures. From our results field researchers and theoreticians can draw inference from a more comprehensive view of human cultural diversity rather than haphazardly self-selecting a few ethngoraphic cases studies. 
+The reviewer brings up an important point. For one, this is partly our motivation for representing the percentage of cultures which provide at least one text record supporting each of the operationalized variables. Despite this low threshold for accepting supporting evidence, the ethnographic record (sampled here) does not provide support for every variable from every culture. At this culture-level we feel more confident our data provide a estimate of cross-cultural frequency, albeit an inherently noisy, "course-grained" estimation. Also, the entire field of ethnology (the branch of anthropology focused on comparing characteristics of populations across the globe) is based on developing comparable and often quantitative measures from primary ethnographic information. For example, the Ethnographic Atlas, which provides hundreds of coded quantitative and qualitative variables on thousands of cultures and the Standard Cross-Cultural Sample, which provides thousands of coded quantitative and qualitative variables on 186 cultures, were developed in essentially the same way we have developed our operationalized variables here. Developing and contrasting coded measures from primary ethnographic documents is not without limitations, but does represent (perhaps) the only method to systematically and empirically compare measures across a large sample of cultures/populations. At the text-record level drawing strong conclusions about the actual frequency of traits is slightly more problematic. However, fundamentally these results provide a systematic view of the ethnographic record on these measures. From our results field researchers and theoreticians can draw inference from a more comprehensive view of human cultural diversity rather than haphazardly self-selecting a few ethnographic cases studies. 
 
-We now discuss these limitations and points more clearly in the limitations setion. NEED TO DO. 
+We now discuss these limitations and points more clearly in the limitations section. NEED TO DO. 
 
 **What does it mean for someone to be a leader at the "supracommunity" level? I'm not familiar with the term, so had difficulty contextualizing the relevant findings. And how exactly do the authors define "community" versus "supracommunity"?**
 
@@ -89,7 +89,17 @@ We greatly appreciate the detailed comments and very useful suggestions.
 
 **In the "Functions of leadership" section, I would expand on your claim that leadership emerges when there is demand for a "managerial presence". You might describe collective action or coordination problems here. That might better motivate the subsequent discussion of different functions of leadership in small-scale societies, as well as discussion of the conditions (e.g. demographic change, wealth access) that increase institutionalization or authority of leaders. Glowacki and von Rueden (2015) suggest that inter-family conflict resolution is where leader institutionalization often first arises, and Roscoe (2009) makes a similar argument concerning leadership in highland New Guinea, where the institutionalized display of material wealth organized by Big Men is rewarded more than ad hoc leadership during war.**
 
-**The Wofford study (lines 214-233) and GLOBE study reminds me of the vast array of descriptive models in leadership/managerial studies- transactional vs. transformational leadership and their sub-components being one of the most popular. So what should a reader make of this literature, with respect to evolution of leadership in small-scale societies? Do bureaucracies, formal legal systems, formal education-based skills, and large inequalities in remuneration limit universality of descriptive models from leadership/managerial studies? I'd be more explicit on this in the introduction. For the discussion section: how does your own descriptive modeling of leadership in traditional societies agree or not with Wofford or other models from large-scale societies?**
+We now more clearly motivate our discussion of the functions of leaders and link discussions to these sources and ideas. 
+
+**The Wofford study (lines 214-233) and GLOBE study reminds me of the vast array of descriptive models in leadership/managerial studies- transactional vs. transformational leadership and their sub-components being one of the most popular. So what should a reader make of this literature, with respect to evolution of leadership in small-scale societies? Do bureaucracies, formal legal systems, formal education-based skills, and large inequalities in remuneration limit universality of descriptive models from leadership/managerial studies? I'd be more explicit on this in the introduction.**
+
+We now include additional discussion of managerial frameworks of leader behavior and highlight recent approaches that are more conducive to coupling with evolutionary and anthropological/psychological approaches. 
+
+<!-- ADDED SOME DISCUSSION IN INTRO. NEED TO FINISH -->
+
+**For the discussion section: how does your own descriptive modeling of leadership in traditional societies agree or not with Wofford or other models from large-scale societies?**
+
+
 
 **There is little mention of gender in the Qualities of leadership section, even though this might be first attribute an alien might recognize as covarying with community-level leadership in human societies. Even in the more egalitarian societies, men often wield more overt political influence during camp or band-wide political discussions. Without getting into arguments about patriarchy and its origins, it might at least be useful to cite your own work on Chabu and work on the Tsimane (von Rueden et al. 2018) that finds similar traits predict leadership for men and women, implying its not gender per se that gives men a leadership advantage in politics.**
 
@@ -100,6 +110,14 @@ We now discuss sex-differences in community and political leadership, and refern
 **Even though this paper is more exploratory, in the last section before the methods, can you venture any predictions about leader function-leader quality covariation? Or about how reported costs and benefits of leadership and followership may vary depending on subsistence type?**
 
 **Many of the variables coded as qualities of leaders may also fall under leader costs and benefits, e.g. polygyny, physical health, wealthy. Were variables like these analyzed in both cases?**
+
+The reviewer brings up an important, i.e., the conceptual and operational overlap in many study variables, and specifically between various qualities and benifits. This is partly a consequence of our methodology, given the coding of qualities was purely driven by the ethngoraphic record whereas our coding of costs and benefits was sketched out a priori, based on evolutionary theory. 
+
+Concerning the quality of *polygynous* and the benefit of *mating*, note that the *mating* benefits includes polygyny, but also includes other mating benefits, such as having a higher quality spouse (but only one). Indeed every text recorded coded as providing evidence for the quality of *polygynous* also provides evidence for the leader *mating* benefit, however the inverse is not the case. Therefore these variables are in fact distinct. 
+
+Another aspect of potential overlap in the data is the quality *wealthy* and the benefit *material resources*. Here, note the operationalization of the quality *wealthy* suggests a relative comparison to followers, or a qualifying statement (we have slightly adjusted the phrasing in our table of operationalization). The benefit measures however is focused on the transactional nature of resource transfer or 'payment'. 
+
+We now discuss these disctintions in more detail in the methods and limitations sections.
 
 **Can you control for phylogeny (e.g. linguistic affinity). See Minocher et al. 2019 in Evolution and Human Behavior. It may be that covariation you detect between qualities and leader functions is driven by shared cultural history more than direct causal relationship between qualities and leader functions.**
 
