--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -45,22 +45,24 @@ We first briefly review theoretical, ethnographic, and empirical perspectives on
 
 Leaders emerge in all human societies. That is, within every population there are particular contexts in which one individual maintains a disproportionate level of influence in the group and functions to facilitate group goals and provides services to the group. Adopting the broad definition of leadership given above, parents can also be defined as leaders of nuclear families. Strong community leadership, however, is extremely common cross-culturally including among hunter-gatherers and relatively small-scale societies [@garfield_review_2019; @von_rueden_leadership_2015].  
 
-Despite the universality of the phenomenon of leadership, the nature of leadership across populations and across social contexts is highly diverse and the emergence of leaders and the functions they serve are expected to be closely tied to group structure and group goals [@van_vugt_cognitive_2007]. Among many of the ethnographically described small-scale societies, which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and leaders emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. Leadership tends to be context-specific and leaders in such contexts often draw on persuasive capacities and leverage community-based respect, specialized skills or knowledge, and social support to achieve or maintain community influence [@kantner_identifying_2010; @lewis_leaders_1974; @boehm_egalitarian_1993]. The theoretical and ethnographic literature suggests these demands most commonly arise in the contexts of collective actions and in conflict resolution [e.g., @glowacki_leadership_2015; @gavrilets_convergence_2016; @hooper_theory_2010; @von_rueden_solving_2015; @henrich_big_2015; @pietraszewski_evolution_2019]. Demands of mediation in within-group conflict resolution, although variable in scale, are probably a universal feature of human groups [@king_origins_2009; @van_vugt_leadership_2008]. Demands of between-group interactions, including both conflict and cooperation are also very common across small-scale societies, including hunter-gatherers [@glowacki_evolutionary_2017; @hames_pacifying_2019; @richerson_cultural_2016; @henrich_evolution_2009; @apicella_social_2012]. Across relatively small-scale societies, at the community level, representing the group and managing both internal and external relationships and conflicts are expected to be the most salient functions of leaders. Within communities, however, leaders may emerge whenever individuals form groups. The role of leaders in ritual contexts, such as in initiations [@singh_cultural_2017], and in providing social services, including facilitating marriages [@walker_evolutionary_2011] and organizing social activities [@wiessner_food_1996], are also expected to be common functions leaders serve. 
+Despite the universality of the phenomenon of leadership, the nature of leadership across populations and across social contexts is highly diverse and the emergence of leaders and the functions they serve are expected to be closely tied to group structure and group goals [@van_vugt_cognitive_2007]. Among many of the ethnographically described small-scale societies, which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and leaders emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. In the absence of institutionalized organizational structure leaders often take on essential roles in group coordination and collective action, including facilitating conflict resolution within or between autonomous households or kin groups, managing individual investments to group-wide projects, and administering sanctions to individuals who do not appropriately contribute to collective actions, comply with group policies, or seriously violate social norms. @glowacki_leadership_2015 draw on empirical, ethnographic, and theoretical models of leader emergence and suggest in small-scale societies institutionalized leadership roles are likely to initially emerge to resolve conflicts between families. @roscoe_social_2009 draws on the ethnography of highland New Guinea in describing the modular structure of human societies and suggests the functions of community leaders in small-scale societies are structured by the joint demands of signaling military fromidability to rival groups and facilitating within-group conflict resolution and cooperation. In addition to military prowess, 'big-men' are characterized by, "talents for oratory, mediation, and organization were instrumental in reducing their internal conflict and enhancing the ability of their members to coordinate their actions as a group" [@roscoe_social_2009][p.104].
 
-Increased sedentarization and defensibility of resources is often associated with both social stratification and institutionalized managerial roles including stronger authority of community leaders and leadership beyond the community level [@johnson_evolution_1987; @johnson_organizational_1982; @kaplan_evolutionary_2009; @ames_hierarchies_1985; @panchanathan_indirect_2004]. Among horticulturalists and agriculturalists managerial leadership can promote more efficient use of shared resources such as water reserves and cooperative labor [e.g., @von_rueden_leadership_2014]. Pastoralists and coastal populations often face similar pressures concerning grazing lands and fishing access [e.g., @widmer_evolution_1988; @stevens_sherpa_1990]. In the wake of economic intensification, the functions of leadership becomes increasingly associated with managing economic systems and distribution of resources. Defensibility of critical resources creates increased opportunities for resource management and is often associated with increased territoriality and increased pressures of inter-group conflicts [@glowacki_evolutionary_2017]. Community leaders among populations more reliant on domesticated plant foods, livestock, and specific territories are often required to manage military forces and develop both offensive and defensive strategies in warfare, more so than mobile populations that rely on dispersed, less defensible resources [@lopez_evolutionary_2017].
+Given specific demands of community organization and conflict resolution, leadership tends to be context-specific and leaders in such contexts often draw on persuasive capacities and leverage community-based respect, specialized skills or knowledge, and social support to achieve or maintain community influence [@kantner_identifying_2010; @lewis_leaders_1974; @boehm_egalitarian_1993]. The theoretical and ethnographic literature suggests these demands most commonly arise in the contexts of collective actions and in conflict resolution [e.g., @glowacki_leadership_2015; @gavrilets_convergence_2016; @hooper_theory_2010; @von_rueden_solving_2015; @henrich_big_2015; @pietraszewski_evolution_2019]. Demands of mediation in within-group conflict resolution, although variable in scale, are probably a universal feature of human groups [@king_origins_2009; @van_vugt_leadership_2008]. Demands of between-group interactions, including both conflict and cooperation are also very common across small-scale societies, including hunter-gatherers [@glowacki_evolutionary_2017; @hames_pacifying_2019; @richerson_cultural_2016; @henrich_evolution_2009; @apicella_social_2012]. Across relatively small-scale societies, at the community level, representing the group and managing both internal and external relationships and conflicts are expected to be the most salient functions of leaders. Within communities, however, leaders may emerge whenever individuals form groups. The role of leaders in ritual contexts, such as in initiations [@singh_cultural_2017], and in providing social services, including facilitating marriages [@walker_evolutionary_2011] and organizing social activities [@wiessner_food_1996], are also expected to be common functions leaders serve. 
 
-In WEIRD societies, community leaders are primarily heads of governmental and corporate bodies [@bass_handbook_1990]. Other public service, nonprofit leaders, and managers include law enforcement and police officers, college presidents and school principles, and grassroots community leaders [@martiskainen_role_2017; @azzam_community_2003; @grace_school_2005]. These positions typically are associated with institutionalized responsibilities and specific functions associated with their roles. The structure of such organizations are generally organized hierarchically with nested bodies and a formal internal 'chain of command.' At higher levels of large-scale organizations, leaders primarily serve as representatives in inter-group interactions, facilitate the creation and adoption of policies, and serve as figure heads embodying the strategic vision of the organization [@keohane_thinking_2010]. They are not typically directly involved in resolving interpersonal conflicts between individuals, however, they are often the final end-point in a decision making hierarchy and the results of a single decision of these leaders can trickle down through industry or government with global ramifications. 
+Increased sedentarization and defensibility of resources is often associated with both social stratification and broader institutionalized managerial roles including stronger authority of community leaders and leadership beyond the community level [@johnson_evolution_1987; @johnson_organizational_1982; @kaplan_evolutionary_2009; @ames_hierarchies_1985; @panchanathan_indirect_2004]. Among horticulturalists and agriculturalists managerial leadership can promote more efficient use of shared resources such as water reserves and cooperative labor [e.g., @von_rueden_leadership_2014]. Pastoralists and coastal populations often face similar pressures concerning grazing lands and fishing access [e.g., @widmer_evolution_1988; @stevens_sherpa_1990]. In the wake of economic intensification, the functions of leadership becomes increasingly associated with managing economic systems and distribution of resources. Defensibility of critical resources creates increased opportunities for resource management and is often associated with increased territoriality and increased pressures of inter-group conflicts [@glowacki_evolutionary_2017]. Community leaders among populations more reliant on domesticated plant foods, livestock, and specific territories are often required to manage military forces and develop both offensive and defensive strategies in warfare, more so than mobile populations that rely on dispersed, less defensible resources [@lopez_evolutionary_2017].
+
+In WEIRD societies, community leaders are primarily heads of governmental and corporate bodies [@bass_handbook_1990]. Other public service, nonprofit leaders and managers include law enforcement and police officers, college presidents and school principles, and grassroots community leaders [@martiskainen_role_2017; @azzam_community_2003; @grace_school_2005]. These positions typically are associated with institutionalized responsibilities and specific functions associated with their roles. The structure of such organizations are generally organized hierarchically with nested bodies and a formal internal 'chain of command.' At higher levels of large-scale organizations, leaders primarily serve as representatives in inter-group interactions, facilitate the creation and adoption of policies, and serve as figure heads embodying the strategic vision of the organization [@keohane_thinking_2010]. They are not typically directly involved in resolving interpersonal conflicts between individuals, however, they are often the final end-point in a decision making hierarchy and the results of a single decision of these leaders can trickle down through industry or government with global ramifications. 
 
 Scholars in managerial studies have long discussed the behaviors of leaders and managers have developed multiple models on the functions of leadership. Classic management theorists [e.g., @davis_learning_1951] emphasized the planning, organizing, and controlling functions of leaders in formal organizational and business settings [see @bass_handbook_1990]. These perspectives focused on the rational, mechanistic aspects of group functioning and often overlooked interpersonal dynamics. Later theorists incorporated cognitive and socioemotional components of leadership functions. For example, @selznick_leadership_1957 describes the functions of organization leaders is to define the goals of the organization, create structures for accomplishing group goals, defend institutional integrity, and maintain internal consistency among group members. 
 
 @wofford_factor_1970 provides an early empirical view of managerial functions. A factor analysis of managerial behaviors from over 130 US employees' survey responses identified five interpretable, orthogonal factors: (1) an *order and group achievement* factor, identifying participative, democratic, and organizational planning function; (2) a *personal enhancement oriented* factor, associated with authority and control, (3) a *personal interaction* factor, associated with interpersonal relationships and employee support, (4) a *security and maintenance* factor, associated with self-preservation, and (5) a *dynamic and achievement oriented* factor, associated with aggressive, self-assured actions. Wofford's analysis provided a foundation for future empirical studies of leadership and management functions. He contrasted factor one type management, described as the "professional administrator" who effectively collaborates and integrates team members, from factors two and five, described as "autocratic leaders" strongly motivated by personal power and a willingness to rely on aggressive tactics [@wofford_factor_1970]. 
 
-More recently, many managerial scholars have adopted a comparative approach to better understand cultural diversity in leadership systems, drawing on Culturally Endorsed Implicit Leadership Theory (CLT), which suggests cultural variation in social norms has the potential to impact follower preferences for leadership styles [@moore_literature_2018]. The Global Leadership and Organizational Behavior Effectiveness (GLOBE) project is a large-scale international research program aimed at understanding leader effectiveness and cultural variation across large organizations. The GLOBE project has produced multiple cross-national data sets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries [@house2013strategic]. The goals of the GLOBE CEO Study were to address (1) how national culture influences expectations for the behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning and low-functioning CEOs, and (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that cultural values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
+More recently, many managerial scholars have adopted integrative and comparative approaches to better understand cultural diversity in leadership systems. @behrendt_integrative_2017 draw on empirical results from the managerial literature and suggest the behaviors of leaders across managerial contexts are classifiable as either *task-oriented*, including enhancing understanding, strengthening motivation and facilitating implementation, or *relation-oriented*, including fostering coordination, promoting cooperation and mobilizing resources. This framework is intended to provide a more fine-grained and externally valid view of leadership functions, compared to traditional models of transactional leadership, which tend to oversimplify dimensions of leader-follower dynamics. More integrated and holistic models have also allowed managerial scholars to develop comparative theoretical frameworks for leader functioning. Culturally Endorsed Implicit Leadership Theory (CLT), suggests cultural variation in social norms has the potential to impact follower preferences for leadership styles [@moore_literature_2018]. The Global Leadership and Organizational Behavior Effectiveness (GLOBE) project is a large-scale international research program aimed at understanding leader effectiveness and cultural variation across large organizations. The GLOBE project has produced multiple cross-national data sets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries [@house2013strategic]. The goals of the GLOBE CEO Study were to address (1) how national culture influences expectations for the behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning and low-functioning CEOs, and (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that cultural values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
 
-The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 "primary leadership behaviors." Among the global leadership behaviors, the GLOBE CEO Study found that charismatic leadership behavior is consistently the most important behavioral trait regarding firm performance and dedication of top management team (TMT) members, followed by team-oriented behavior and human-oriented behavior. Participative leadership was moderately related to TMT dedication, however was not related to firm performance. The most successful CEOs are those who are rated as more visionary, performance oriented, and decisive. Furthermore, results strongly suggest the fit between a CEOs behavioral profile and the expectations of leadership within a society strongly predict TMT dedication and firm performance.
+The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 "primary leadership behaviors." Among the global leadership behaviors, the GLOBE CEO Study found that charismatic leadership behavior is consistently the most important behavioral trait regarding firm performance and dedication of top management team (TMT) members, followed by team-oriented behavior and human-oriented behavior. Participative leadership was moderately related to TMT dedication, however was not related to firm performance. The most successful CEOs are those who are rated as more visionary, performance oriented, and decisive. Furthermore, results strongly suggest the fit between a CEOs behavioral profile and the expectations of leadership within a society strongly predict TMT dedication and firm performance. By higher-order features of leadership behavior and situating leadership functions within more detailed classification frameworks, insights from managerial studies can more effectively be coupled with approaches from within psychology and anthropology. 
 
 <!-- ADDED CONCLUSION PARAGRAPH/STATEMENT.  -->
-In contrasting the functions leaders serve in smaller-scale, non-industrial, and more traditional societies (i.e., non-WEIRD), from larger-scale, (post)industrial contexts (i.e., WEIRD), community leaders in non-WEIRD settings are more likely to have domain-specific functions based on role-specialization [see @smith_leadership_2016]. The hunt leader does not necessarily have authority over military raids and the lineage head does not necessarily have authority over ritual ceremonies. In WEIRD settings however, community, organizational, and political leaders often have decision-making authority across multiple domains. In the United States, despite a designed seperation of power across branches of government, presidents, governors, and mayors oversee governmental bodies and have substantial influence in economics, social and legal policies, and international and inter-regional relations. Community leadership functions in increasingly WEIRD contexts will likely be increasingly focused on economics and inter-group relations, whereas in less WEIRD contexts community leaders will primarily function to resolve interpersonal conflicts and manage inter-group social dynamics. 
+In contrasting the functions leaders serve in smaller-scale, non-industrial, and more traditional societies (i.e., non-WEIRD), from larger-scale, (post)industrial contexts (i.e., WEIRD), community leaders in non-WEIRD settings are more likely to have domain-specific functions based on role-specialization [see @smith_leadership_2016]. The hunt leader does not necessarily have authority over military raids and the lineage head does not necessarily have authority over ritual ceremonies. In WEIRD settings however, community, organizational, and political leaders often have decision-making authority across multiple domains. In the United States, despite a designed separation of power across branches of government, presidents, governors, and mayors oversee governmental bodies and have substantial influence in economics, social and legal policies, and international and inter-regional relations. Community leadership functions in increasingly WEIRD contexts will likely be increasingly focused on economics and inter-group relations, whereas in less WEIRD contexts community leaders will primarily function to resolve interpersonal conflicts and manage inter-group social dynamics. 
 <!-- Could add ethnographic examples for SSS and LSS  -->
 
 
@@ -124,7 +126,7 @@ In sum, we seek to empirically and systematically accomplish the following four 
 
 ## Ethnographic sample and coding
 
-We estimate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. The electronic Human Relations Area Files (eHRAF) is a digital collection of ethnographies, subject-coded at the paragraph level following a the Outline of Cultural Materials (OCM) coding scheme. The eHRAF is a subset of the larger HRAF and is continually growing in scope. 
+We estimate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. The electronic Human Relations Area Files (eHRAF) is a digital collection of ethnographies, subject-coded at the paragraph level following the Outline of Cultural Materials (OCM) coding scheme. The eHRAF is a subset of the larger HRAF and is continually growing in scope. 
 
 Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record "speak for itself" in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. We draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the eHRAF database [@naroll_proposed_1967]. The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership across social contexts and was built using an advanced search including 16 OCM codes related to leadership seven key words describing leaders or followers. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. See @garfield_evolutionary_2019 for additional details on the ethnographic sample and methodology.
 
@@ -139,7 +141,7 @@ library(knitr)
 kable(qual_func_var_tab, caption = "Operational definitions for coded leader qualities and functions.")
 ```
 
-Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, material resources, and other miscellaneous costs or benefits not captured by these categories. See Table \@ref(tab:costbenefitvars).
+Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs paid or benefits received in the following categories: social status, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, material resources, and other miscellaneous costs or benefits not captured by these categories. See Table \@ref(tab:costbenefitvars). There are multiple instances of conceptual overlap between many of our researcher-coded variables, in particular between various qualities and related costs or benefits. The operationalization of costs and benefits generaly capture a wider range of evidence than related qualities and focus more on evidence of transaction rather than description. We return to this point in the limitations section. 
 
 ```{r costbenefitvars, echo=FALSE, message=F, warning=FALSE}
 library(readr)
